grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: grafana-deployment
  name: grafana
  namespace: monitoring
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: grafana
  type: NodePort
